apps/gitlab/gitlab-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
  labels:
    name: gitlab
  annotations:
    argocd.argoproj.io/sync-wave: "0"
